--- a/css/login.css
+++ b/css/login.css
@@ -56,7 +56,7 @@ a:hover{
 button{
   border-radius: 30px;
   border: none;
-  background-color: #F58220;
+  background-color: #f8a054;
   color: white;
   width: 150px;
   height: 40px;
@@ -67,9 +67,9 @@ button{
 }
 
 button:hover{
-  background-color: white;
-  color: #F58220;
-  transition: 0.6s linear;
+  background-color: #f5780a;
+  color: white;
+
   cursor: pointer;
 }
 
