--- a/css/category.css
+++ b/css/category.css
@@ -117,10 +117,15 @@
     background-color: #008D96;
     color: white;
     text-align: left;
-    width: 85%;
 }
+
+.table-num{
+    width: 20px;
+}
+
 .category-container .category-table .op{
   text-align: center;
+  width: 150px;
 }
 
 .U-D{
