--- a/css/product.css
+++ b/css/product.css
@@ -41,13 +41,14 @@
 .txt-error{
   background-color: #F58220;
   color: white;
-  width: 82.5%;
+  width: 35.5%;
   font-size: 13px;
-  padding: 10px;
+  padding: 5px;
   border-radius: 2px;
-  margin-top: 6px;
   font-weight: bolder;
-  position: fixed;
+  position: absolute;
+  left: 400px;
+  top: 50px;
   display: visible;
 }
 
@@ -76,10 +77,9 @@
 }
 
 .btn-addproduct{
-  margin-top: 50px;
   position: absolute;
-  left: 0;
-  top: 30px;
+  left: 180px;
+  top: 47px;
   background-color: #008D96;
   color: white;
   border: none;
@@ -91,11 +91,12 @@
 
 .product-container{
   width: 100%;
-  margin-top: 100px;
+  margin-top: 10px;
   box-shadow: 1px -1px 1px 1px rgb(194, 192, 192);
   border-radius: 3px;
   background-color: white;
   font-size: 12px;
+  padding: 10px;
 }
 
 /* label */
@@ -110,10 +111,10 @@
   width: 100%;
   border-collapse: collapse;
   font-weight: 900;
+  padding-top: 10px;
 }
 
 .product-table td, .product-table th{
-    padding: 10px 10px;
     border: 1px solid #ddd;
 }
 .product-table th{
@@ -157,16 +158,15 @@
 
 .update{
   background-color: #008D96;
-  padding: 5px;
+  padding: 3px 2px;
   border-radius: 2px;
   color: white;
   font-weight: bolder;
-  margin-left: 15px;
 }
 
 .delete{
   background-color:  #F58220;
-  padding: 5px;
+  padding: 3px 2px;
   border-radius: 2px;
   color: white;
   font-weight: bolder;
