--- a/css/brand.css
+++ b/css/brand.css
@@ -74,10 +74,9 @@
 }
 
 .btn-addbrand{
-  margin-top: 50px;
   position: absolute;
-  left: 0;
-  top: 30px;
+  left: 180px;
+  top: 47px;
   background-color: #008D96;
   color: white;
   border: none;
@@ -92,16 +91,16 @@
 
 .brand-container{
   width: 100%;
-  margin-top: 100px;
+  margin-top: 10px;
   box-shadow: 1px -1px 1px 1px rgb(194, 192, 192);
   border-radius: 3px;
   background-color: white;
-  font-size: 15px;
+  font-size: 12px;
+  padding: 10px;
 }
 
 /* label */
 .text-brand{
-
   color: #008D96;
   padding: 5px;
   font-size: 20px;
@@ -111,10 +110,10 @@
   width: 100%;
   border-collapse: collapse;
   font-weight: 900;
+  padding-top: 10px;
 }
 
 .brand-table td, .brand-table th{
-    padding: 10px 15px;
     border: 1px solid #ddd;
 }
 .brand-table th{
@@ -129,13 +128,9 @@
 
 .brand-container .brand-table .op{
   text-align: center;
-  width: 150px;
+  width: 90px;
 }
 
-.U-D{
-  text-align: center;
-  padding-left: 30px;
-}
 
 .update{
   background-color: #008D96;
@@ -144,6 +139,7 @@
   color: white;
   font-weight: bolder;
   cursor: pointer;
+  margin-left: 10px;
 }
 
 .delete{
@@ -152,6 +148,7 @@
   border-radius: 2px;
   color: white;
   font-weight: bolder;
+  cursor: pointer;
 }
 
 .update:hover{
@@ -230,6 +227,7 @@
   width: 100%;
   padding: 5px;
   font-size: 12px;
+  font-weight: bolder;
   border: solid 1px  #008c96a4;
 }
 
