--- a/css/product.css
+++ b/css/product.css
@@ -89,6 +89,10 @@
   border-radius: 2px;
 }
 
+.btn-addproduct:hover{
+  background-color: #008c96a4;
+}
+
 .product-container{
   width: 100%;
   margin-top: 10px;
@@ -101,7 +105,6 @@
 
 /* label */
 .text-product{
-
   color: #008D96;
   padding: 5px;
   font-size: 20px;
@@ -148,12 +151,7 @@
 
 .product-container .product-table .op{
   text-align: center;
-  width: 150px;
-}
-
-.U-D{
-  text-align: center;
-  padding-left: 30px;
+  width: 100px;
 }
 
 .update{
@@ -162,6 +160,8 @@
   border-radius: 2px;
   color: white;
   font-weight: bolder;
+  margin-right: 5px;
+  margin-left: 10px;
 }
 
 .delete{
@@ -170,6 +170,7 @@
   border-radius: 2px;
   color: white;
   font-weight: bolder;
+  cursor: pointer;
 }
 
 .update:hover{
@@ -189,7 +190,7 @@
 }
 
 
-/* MODaL CONTAINER....... */
+/* ...............................................MODaL CONTAINER....... */
 .addProduct-modal{
   position: absolute;
   top: 0;
